pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
spec:
  containers:
  - name: app
    image: k8s-gr4/app-rust
    imagePullPolicy: Never
    ports:
    - containerPort: 8080
    args:
    - "--add-host=host.docker.internal:host-gateway"
    resources:
      limits:
        memory: "512Mi"
        cpu: "500m"
  - name: db
    image: mariadb
    ports:
    - containerPort: 3036
    resources:
      limits:
        memory: "512Mi"
        cpu: "500m"
